# flatzinc_based_pso

./: .gitignore  Cargo.toml  LICENSE  README.md  g10.json  invariant_graph.dot  report.txt
examples/: 1_problem.rs  2_problem.rs  6_problem.rs  flatzinc_based_pso_test.rs  g01_problem.rs  g02_problem.rs  g03_problem.rs  g04_problem.rs  g05_problem.rs  g06_problem.rs  g07_problem.rs  g08_problem.rs  g09_problem.rs  g10_problem.rs  g11_problem.rs  g12_problem.rs  int_aus.rs  int_cakes.rs  int_queens.rs
minizinc/: aus.mzn  cakes.mzn  g01.mzn  g01.ozn  g02.mzn  g02.ozn  g03.mzn  g03.ozn  g04.mzn  g04.ozn  g05.mzn  g05.ozn  g06.mzn  g07.mzn  g07.ozn  g08.mzn  g08.ozn  g09.mzn  g09.ozn  g10.mzn  g10.ozn  g11.mzn  g12.mzn  g12.ozn  problem1.mzn  problem1.ozn  problem2.mzn  problem6.mzn  problem6.ozn  queens.mzn  queens.ozn
python/: collect_results.py  collect_runtimes.py  compare_summaries.py  compile_g_models_minizinc.py  wilcoxon_compare.py
report/: runtime_table.txt
reports/: 1_flatzinc_pso.txt  1_flatzinc_pso_summary.json  1_pso.txt  1_pso_summary.json  2_flatzinc_pso.txt  2_flatzinc_pso_summary.json  2_pso.txt  2_pso_summary.json  6_flatzinc_pso.txt  6_flatzinc_pso_summary.json  6_pso.txt  6_pso_summary.json  flatzinc_pso_vs_pso_models.txt  g01_flatzinc_pso.txt  g01_flatzinc_pso_summary.json  g01_pso.txt  g01_pso_summary.json  g02_flatzinc_pso.txt  g02_flatzinc_pso_summary.json  g02_pso.txt  g02_pso_summary.json  g03_flatzinc_pso.txt  g03_flatzinc_pso_summary.json  g03_pso.txt  g03_pso_summary.json  g04_flatzinc_pso.txt  g04_flatzinc_pso_summary.json  g04_pso.txt  (+33 more)
(+355 files in other folders)
