[package]
name = "constraint_evaluator"
version = "0.1.0"
edition = "2024"

[dependencies]
flatzinc-serde = "0.4.4"
serde_json = "1.0.149"
log = "0.4.29"
env_logger = "0.11.10"
regex = "1.12.3"
rand = "0.10.0"
rand_chacha = "0.10.0"
rand_distr = "0.6.0"
petgraph = "0.8.3"
serde = { version = "1", features = ["derive"] }

[profile.release]
debug=true
